--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -66,7 +66,7 @@ body
                                         p.card-text.mb-auto Building  a simple CRUD application with INTU
                                         a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank').mt-3 Read More
                                 .col-md-4.col-xs-12
-                                    img.card-img-right(src='https://placeimg.com/200/250/tech').img-fluid.mx-auto.d-block
+                                    img.card-img-right(src='crud.jpeg').img-fluid.mx-auto.d-block
                     .col-md-6
                         .card.mb-3
                             .row.no-gutters
@@ -76,7 +76,7 @@ body
                                         p.card-text PhoneGap
                                         a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/mobile', target='_blank').mt-3 Read More
                                 .col-md-4.col-xs-12
-                                    img(src='https://placeimg.com/200/250/tech').img-fluid.mx-auto.d-block
+                                    img(src='tech.jpeg').img-fluid.mx-auto.d-block
     include /includes/footer
     
     style.
