--- a/site/includes/navbar.pug
+++ b/site/includes/navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light
    a.navbar-brand(href='/') INTUITION.DEV
-   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarText', aria-controls='navbarText', aria-expanded='false', aria-label='Toggle navigation')
+   button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarText')
       span.navbar-toggler-icon
 
    #navbarText.collapse.navbar-collapse
@@ -10,10 +10,11 @@ nav.navbar.navbar-expand-lg.navbar-light
          li.nav-item
             a.nav-link(href='/landing/features/') Features
          li.nav-item
-            a.nav-link(href='/examples') Examples
+            a.nav-link(href='/pg/examples') Examples
          li.nav-item
             a.nav-link(href='https://intuition-dev.github.io/IntuitionDocs/#/', target="_blank") Docs
          li.nav-item
             a.nav-link(href='https://blog.metabake.net/', target="_blank") Blog
       a.navbar-text(href='//github.com/intuition-dev', target="_blank")
-         i.fa.fa-github
+         h2.text-dark
+            i.fa.fa-github
