--- a/site/includes/footer.pug
+++ b/site/includes/footer.pug
@@ -12,7 +12,7 @@ footer.bg-dark
       .container
             .p-2.d-flex.justify-content-between.text-secondary
                .copyright.font-weight-light &#169; 2019 
-                  span.d-inline-block.pl-1 Intuition
+                  span.d-inline-block.pl-1 INTUITION.DEV
                a.font-weight-light.text-secondary(href='//github.com/intuition-dev') Github
    style.
         .bg-very-dark {
