--- a/site/landing/features/index.pug
+++ b/site/landing/features/index.pug
@@ -10,8 +10,7 @@ body
         .row
             .col-md-12.text-center
                 h3.mb-3.pb-3 Features
-            .col-md-10.offset-md-1.text-center
-                include:metaMD /text/easy.md
+    
             .col-md-12.pt-3
                 .row
                     .col-md-5
@@ -21,6 +20,7 @@ body
                     .col-md-5.offset-md-1
                         .feat-list
                             include:metaMD /text/features2.md
+
     include /includes/footer
 
 
@@ -36,6 +36,8 @@ body
             margin:0 0 6px 2em; /* Give each list item a left margin to make room for the numbers */
             padding:4px 8px; /* Add some spacing around the content */
             padding-left: 4px;
+            border-top:2px solid #666;
+            background: #f6f6f6;
             min-height: 50px;
         }
         ol > li:before {
@@ -45,16 +47,13 @@ body
             counter-increment:lic; /* Increment the counter by 1 */
             content:counter(lic); /* Use the counter as content */
 
-            top:8px;
-            left:-44px;
-            width:2rem;
+            top:-6px;
+            left:-68px;
+            width:2em;
           
             text-align:center;
-            color:#fff;
+            color:#999;
             
-            font: normal 18px/1.5 "Helvetica Neue", Arial, sans-serif;
-            background: #343a40;
-            border-radius: 4px;
-            font-weight: 300;
+            font: italic 38px/1.5 "Helvetica Neue", Arial, sans-serif;
         }
 
