--- a/site/includes/footer.pug
+++ b/site/includes/footer.pug
@@ -1,8 +1,22 @@
 
-.container
-   #remarkbox-div
 
-footer.bg-dark
+.container
+   .row
+      .col-md-12
+
+         #commento
+
+         script.
+
+            depp.define({
+               'commento': ['https://cdn.commento.io/js/commento.js']
+            })
+            depp.require(['reqs'], function() {
+               depp.require('commento')
+            })
+
+
+.bg-dark
    .container.mt-3
       div.py-5
          .row
@@ -14,52 +28,22 @@ footer.bg-dark
                   include:metaMD /text/star.md
 
 
-   .bg-very-dark
-      .container
-            .p-2.d-flex.justify-content-between.text-secondary
-               .copyright.font-weight-light &#169; 2019 
-                  span.d-inline-block.pl-1 INTUITION.DEV
-            
-
-   <script src="https://my.remarkbox.com/static/js/iframe-resizer/iframeResizer.min.js"></script>
-
-   script.
-      var rb_owner_key = "c7fc5cbf-bb88-11e9-a053-040140774501";
-      var thread_uri = window.location.href;
-      var thread_title = window.document.title;
-      var thread_fragment = window.location.hash;
-      function create_remarkbox_iframe() {
-         var src = "https://my.remarkbox.com/embed?rb_owner_key=" + rb_owner_key + "&thread_title=" + thread_title + "&thread_uri=" + thread_uri;
-         var ifrm = document.createElement("iframe");
-         ifrm.setAttribute("id", "remarkbox-iframe");
-         ifrm.setAttribute("scrolling", "no");
-         ifrm.setAttribute("src", src);
-         ifrm.setAttribute("frameborder", "0");
-         ifrm.setAttribute("tabindex", "0");
-         ifrm.setAttribute("title", "Remarkbox");
-         ifrm.style.width = "100%";
-         document.getElementById("remarkbox-div").appendChild(ifrm);
-      }
-      create_remarkbox_iframe();
-      iFrameResize(
-         {
-            checkOrigin: ["https://my.remarkbox.com"],
-            inPageLinks: true,
-            initCallback: function(e) {e.iFrameResizer.moveToAnchor(thread_fragment)}
-         },
-         document.getElementById("remarkbox-iframe")
-      );
-
+      .bg-very-dark
+         .container
+               .p-2.d-flex.justify-content-between.text-secondary
+                  .copyright.font-weight-light &#169; 2019 
+                     span.d-inline-block.pl-1 INTUITION.DEV
+               
    
    
-   style.
-        .bg-very-dark {
-           background: #2a2f33;
-        }
-        .star-it,
-        .star-it a {
-           color: white;
-           display: block;
-           font-size: 14px;
-           margin-top: 6px;
-        }
+style.
+   .bg-very-dark {
+      background: #2a2f33;
+   }
+   .star-it,
+   .star-it a {
+      color: white;
+      display: block;
+      font-size: 14px;
+      margin-top: 6px;
+   }
