--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -1,10 +1,6 @@
-head
-    include /layout/headFrag
+extends /layouts/layout
 
-body
-    script(src='/layout/ui-loader.js')
-    .container
-        include /includes/navbar
+block main
 
     main(role='main')
         .jumbotron.hero-image
@@ -81,7 +77,6 @@ body
                                         .col-md-4.col-xs-12
                                             img(src='tech.jpeg').img-fluid.mx-auto.d-block
   
-    include /includes/footer
     
     style.
         .intu-title {
