--- a/site/layouts/layout.pug
+++ b/site/layouts/layout.pug
@@ -1,11 +1,11 @@
 head
-    include /layout/headFrag
+    include headFrag
 
 body
-    script(src='/layout/ui-loader.js')
+    script(src='/layouts/ui-loader.js')
     .container
         include /includes/navbar
 
-        block main
+    block main
 
-        include /includes/footer
+    include /includes/footer
