--- a/site/pg/examples/index.pug
+++ b/site/pg/examples/index.pug
@@ -2,12 +2,11 @@ extends /layouts/layout
 
 block main
 
-   .container.jumbotron
+   .container
       .row
          .col-md-12
                div.text-center
-                  h3.mb-0 Things that you can build with Intuition 
-                  p.sub-header mbake or mbake-x for more info in your terminal
+                  h3.mb-0 Examples 
                .l-showcase
                   each val in showcase
                      .l-showcase--item
