--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -2,7 +2,7 @@ extends /layouts/layout
 
 block main
 
-    main(role='main')
+    div
         .jumbotron.hero-image
             .container
                 .row.align-items-center
@@ -22,7 +22,7 @@ block main
                 hr
                 p
  
-        .jumbotron.section-padding.bg-white
+        div
             .container
                 .row.px-0.align-items-center.text-center
                     .col-md-12
