--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -101,7 +101,7 @@ block main
             background: white;
         }
         .hero-image {
-            background-image: url(truck_3.jpg);
+            background-image: url(truck1c.jpg);
             background-repeat: no-repeat;
             background-position: bottom;
             background-size: cover;
