--- a/site/includes/navbar.pug
+++ b/site/includes/navbar.pug
@@ -10,11 +10,16 @@ nav.navbar.navbar-expand-lg.navbar-light
          li.nav-item
             a.nav-link(href='/landing/features/') Features
          li.nav-item
-            a.nav-link(href='/pg/examples') Examples
-         li.nav-item
             a.nav-link(href='https://intuition-dev.github.io/IntuitionDocs/#/', target="_blank") Docs
          li.nav-item
+            a.nav-link(href='/pg/examples') Examples
+         li.nav-item
+            a.nav-link(href='https://forum.mbake.org') Message Board
+         li.nav-item
+            a.nav-link(href='/pg/about') About
+         li.nav-item
             a.nav-link(href='https://blog.metabake.net/', target="_blank") Blog
+            
       a.navbar-text(href='//github.com/intuition-dev', target="_blank")
          h2.text-dark
             i.fa.fa-github
