--- a/site/layouts/headFrag.pug
+++ b/site/layouts/headFrag.pug
@@ -9,7 +9,7 @@ script(src='https://cdn.jsdelivr.net/npm/johnnydepp@0.1.0/dist/depp.min.js')
 
 link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.8.14/bootStrap/css/bootstrapTop.css')
 
-script(src='https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.8.14/toolBelt/toolBelt.min.js')
+script(src='https://cdn.jsdelivr.net/gh/intuition-dev/toolBelt@v1.8.14/toolBelt/toolBelt.js')
 
 //-script(src='toolBelt.js')
 //-script(src='other.js')
