--- a/site/includes/navbar.pug
+++ b/site/includes/navbar.pug
@@ -8,17 +8,17 @@ nav.navbar.navbar-expand-lg.navbar-light
          li.nav-item.active
             a.nav-link(href='/') Low-Code
          li.nav-item
-            a.nav-link(href='/landing/features/') Features
+            a.nav-link(href='/pg/features/') Features
          li.nav-item
-            a.nav-link(href='https://intuition-dev.github.io/IntuitionDocs/#/', target="_blank") Docs
+            a.nav-link(href='http://intuition-dev.github.io/IntuitionDocs/#/', target="_blank") Docs
          li.nav-item
             a.nav-link(href='/pg/examples') Examples
          li.nav-item
-            a.nav-link(href='https://forum.mbake.org') Message Board
+            a.nav-link(href='http://forum.mbake.org') Message Board
          li.nav-item
             a.nav-link(href='/pg/about') About
          li.nav-item
-            a.nav-link(href='https://blog.metabake.net/', target="_blank") Blog
+            a.nav-link(href='http://blog.metabake.net/', target="_blank") Blog
             
       a.navbar-text(href='//github.com/intuition-dev', target="_blank")
          h2.text-dark
