--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -6,7 +6,7 @@ block main
         .jumbotron.hero-image
             .container
                 .row.align-items-center
-                    .col-md-12.text-center.robots-replace
+                    .col-md-12.text-center
                         h1 What will the future of professional development look like?
                         h2
                             include:metaMD /text/motto.md
@@ -14,9 +14,10 @@ block main
         br
         .container
             .col-md-12
-                p
                 h4
                     include:metaMD  /text/approach.md
+                p
+                br
                 p
                 hr
                 p
@@ -25,33 +26,35 @@ block main
             .container
                 .row.px-0.align-items-center.text-center
                     .col-md-12
-                        p.display-6 What if users could maintain and build next versions?
+                        h1 What if users could maintain and build future versions?
                         p Version 1.0 spec is followed by next version - majority of effort is after 1.0 release!
                         img(src="iterative.png").rounded.mt-3.img-fluid
 
                 .col-md-12
                     include:metaMD  /text/easy.md
-                    hr
-            
+                    p
+                    br
+                    p
+            hr
             .bg-light
                 .container
                     .row.align-items-center
-                        .col-md-12
-                            div.text-center
-                                p.display-6 What makes INTUITION.DEV different?
-                            div.mb-3.mt-3
-                                div.d-flex.flex-column.custom-list
-                                    include:metaMD /text/difference.md
-                                div.text-left
-                                    a.text-lowercase.font-weight-light.btn.btn-primary(href="/landing/features").mt-3 More...
+                        .col-md-1
+                        .col-md-10
+                            h2.text-center What makes INTUITION.DEV different?
+                            br
+                            include:metaMD /text/difference.md
+                            a.font-weight-light.btn.btn-primary(href="/pg/features").mt-3 Features...
+                            p
+                            br
+                            p
 
                     .jumbotron.p-3.p-md-5.text-white.rounded.bg-dark
                         .col-md-10.px-0
-                            h1.display-5.font-italic No matter what app we build, you need SEO. Static is not optional
+                            h1.display-5.font-italic No matter what app we build, you need SEO. Static is not optional.
                             p.lead.my-3 SEO helps to boost your revenue by increasing the number of leads and by increasing sales.
                             p.mb-0
                                 a.text-white.font-weight-bold(href='https://intuition-dev.github.io/IntuitionDocs/#/SEO', target='_blank').btn.btn-primary Continue reading...
-
 
                     .row.mb-2
                             .col-md-6
@@ -61,7 +64,7 @@ block main
                                             .card-body
                                                 h4.card-title
                                                     a.text-dark(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank') Basic CRUD application
-                                                p.card-text.mb-auto Building  a simple CRUD application with INTU
+                                                p.card-text.mb-auto Building  a simple CRUD application, and leverage built in user authentication.
                                                 a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
                                             img.card-img-right(src='crud.jpeg').img-fluid.mx-auto.d-block
@@ -71,35 +74,18 @@ block main
                                         .col-md-8
                                             .card-body
                                                 h4.card-title Mobile App
-                                                p.card-text PhoneGap
+                                                p.card-text Use exactly the same code for WebApp, IOS and Andorid
                                                 a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/mobile', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
                                             img(src='tech.jpeg').img-fluid.mx-auto.d-block
   
+
     
     style.
         .intu-title {
             text-shadow: 1px 1px 0px #ffffff;
-            color: rgba(0, 0, 0, 0.74);
         }
-        .section-padding {
-            padding: 6rem 2rem;
-        }
-        .display-5 {
-            font-size: 3rem;
-            line-height: 1.3;
-        }
-        .display-6 {
-            font-size: 2.5rem;
-            line-height: 1.3;
-
-        }
-        .iterations {
-            border: 1px solid white;
-            padding: 10px;
-            box-shadow: 0 0 1px grey;
-            background: white;
-        }
+     
         .hero-image {
             background-image: url(truck1c.jpg);
             background-repeat: no-repeat;
@@ -111,67 +97,6 @@ block main
             position: relative;
             border-radius: 0;
         }
-        .hero-image > .container {
-            position: relative;
-            z-index: 1;
-        }
-        .robots-replace p{
-            position: relative;
-            z-index: 1;
-            text-shadow: 0 0 6px #000101, 0 0 26px #1b3458;
-        }
-        
-        .robots-replace:after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            display: block;
-            top: 0;
-            left:0;
-            z-index: 0;
-        }
+       
 
-        .main-bg > div {
-            position: relative;
-            z-index: 1;
-        }
-        
-        .main-bg:after {
-            content: '';
-            position: absolute;
-            background: #f2f2f2;
-            background-repeat: no-repeat;
-            width: 100%;
-            height: 100%;
-            display: block;
-            top: 0;
-            right: 0;
-            z-index: -1;
-        }
 
-        .custom-list ul{
-            padding: 3rem 0 0 0;
-            list-style: none;
-            margin: 0;
-            column-count: 1;
-            column-gap: 4rem;
-            column-rule: 1px solid #cfcfcf;
-            text-align: left;
-            text-transform: capitalize;
-        }
-        .custom-list ul li {
-            line-height: 2;
-            position: relative;
-            padding-left: 16px;
-        }
-        .custom-list ul li:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 13px;
-            width: 6px;
-            height: 6px;
-            border-radius: 4px;
-            background: #343a40;
-        }
