--- a/site/includes/footer.pug
+++ b/site/includes/footer.pug
@@ -24,7 +24,8 @@
          .row
             .col-md-6
                a.h5(href="/").text-white INTUITION.DEV
-               div.text-white.star-it It will LEAD you in the right direction
+               div.text-white.star-it
+                  include:metaMD /text/song.md
             .col-md-6.text-right
                div.text-white.star-it
                   include:metaMD /text/star.md
