--- a/site/landing/low/index.pug
+++ b/site/landing/low/index.pug
@@ -2,9 +2,9 @@ extends /layouts/layout
 
 block head2
     script.
-        console.log('img truck1c.jpg')
+        console.log('img truck1')
         depp.require('load-image', function(){
-          loadImage('truck1c.jpg')  
+          loadImage('truck1.2K.min.jpg')  
         })
 
 
@@ -75,7 +75,7 @@ block main
                                                 p.card-text.mb-auto Building  a simple CRUD application, and leverage built in user authentication.
                                                 a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/CRUD', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
-                                            img.card-img-right(src='crud.jpeg').img-fluid.mx-auto.d-block
+                                            img.card-img-right(src='books.jpg').img-fluid.mx-auto.d-block
                             .col-md-6
                                 .card.mb-3
                                     .row.no-gutters
@@ -85,9 +85,8 @@ block main
                                                 p.card-text Use exactly the same code for WebApp, IOS and Andorid
                                                 a.btn.btn-primary(href='https://intuition-dev.github.io/IntuitionDocs/#/mobile', target='_blank').mt-3 Read More
                                         .col-md-4.col-xs-12
-                                            img(src='tech.jpeg').img-fluid.mx-auto.d-block
+                                            img(src='phone.jpg').img-fluid.mx-auto.d-block
   
-
 
     style.
         .intu-title {
@@ -95,7 +94,7 @@ block main
         }
      
         .hero-image {
-            background-image: url(truck1c.jpg);
+            background-image: url(truck1.2K.min.jpg);
             background-repeat: no-repeat;
             background-position: bottom;
             background-size: cover;
